static/skywarehouse/css/style.less
// out: style.css, sourcemap: false, compress: true

// Global

.ontop {
    position: fixed;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    top: 0;
    z-index: 100;
    .row.container { margin-bottom: 0 }
}

.p-top { padding-top: 12px }

// Carousel

.carousel .carousel-item {
  width: 100%;
  padding-left: 25px;
  height: auto;
}

// Header

.banner { height: auto }
#banner-logo {
    padding-top: 70px;
    padding-bottom: 40px;
}

// Footer

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}
main { flex: 1 0 auto }
footer {
    padding: 30px;
}

// Cards layout

.cards-container {
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;

    .card {
        display: inline-block;
        overflow: visible;
    }
}

@media only screen and (max-width: 600px) {
    .cards-container {
        -webkit-column-count: 1;
        -moz-column-count: 1;
        column-count: 1;
    }
}
@media only screen and (min-width: 601px) {
    .cards-container {
        -webkit-column-count: 2;
        -moz-column-count: 2;
        column-count: 2;
    }
}
@media only screen and (min-width: 993px) {
        .cards-container {
        -webkit-column-count: 3;
        -moz-column-count: 3;
        column-count: 3;
    }
}


// Cards

.card {
    meter {
        width: 100%;
        background: #CCC;
        // -webkit-appearance: none;
        -moz-appearance: none;
        border-radius: 3px;
        float: right;
        top: 10px;
    }
    ::-webkit-meter-bar {
        background: #CCC;
        border-radius: 3px;
    }
    ::-moz-meter-bar {
        background: #212121;
        border-radius: 3px;
    }
    ::-webkit-meter-optimum-value {
        background: #212121;
        border-radius: 3px;
    }
    .card-content i { width: 45px }
    .card-action a { color: #000 }
}
.card > a { color: #212121 }


// Main page buttons

.btn.categ {
    margin-bottom: 5px;
}

